followed tutorial from stacktips.com for using recyclerview, made contacts an activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".chatApp.ListViewActivity"></activity>
+        <activity android:name=".chatApp.ChatContactsActivity" />
+        <activity android:name=".chatApp.ContactsActivity"></activity>
     </application>
 
 </manifest>
