--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".chatApp.ContactsActivity"></activity>
+        <activity android:name=".contacts.ContactsActivity"></activity>
     </application>
 
 </manifest>
