--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".registerLoging.StartActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -23,10 +25,14 @@
         </activity>
         <activity
             android:name=".chatApp.ChatActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation"
             android:label="@string/title_activity_chat"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".contacts.ContactsActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation"
             android:parentActivityName=".chatApp.ChatActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
