--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,3 +54,8 @@ dependencies {
 dependencies {
     implementation 'com.android.support:support-v4:27.+'
 }
+apply plugin: 'com.google.gms.google-services'
+
+dependencies {
+    implementation 'com.google.firebase:firebase-messaging:12.0.0'
+}
