--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,3 +54,7 @@ dependencies {
 dependencies {
     implementation 'com.android.support:support-v4:27.+'
 }
+
+dependencies {
+    implementation 'com.android.support:support-v4:27.+'
+}
