--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_rabbit_logo"
+        android:icon="@mipmap/ic_rabbit_logo_this"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_rabbit_logo_translucent"
         android:supportsRtl="true"
